--- a/app/views/members/_search.html.erb
+++ b/app/views/members/_search.html.erb
@@ -4,7 +4,7 @@
   <thead>
   	<tr>
       <th style="width: 110px;"><%= sortable "members.status", t('activerecord.attributes.member.status') %></th>
-      <th style="width: 125px;" NOWRAP> <%= sortable "members.id", t('activerecord.attributes.member.id') %> </th>
+      <th style="width: 125px;" NOWRAP id="th_member_id"> <%= sortable "members.id", t('activerecord.attributes.member.id') %> </th>
       <% if @current_club.requires_external_id %>
         <th> <%= t('activerecord.attributes.member.external_id') %> </th>
       <% end %>
