--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,5 +24,15 @@
       <br>
       <%= render :partial => "shared/footer"%>
     </div> <!-- /container -->
+
+    <% if Rails.env.production? and params[:controller].include?('members') and ['index', 'show'].include?(params[:action]) and  params[:club_prefix] == 'Nascar' %>
+      <script type="text/javascript">
+        setTimeout(function(){var a=document.createElement("script");
+        var b=document.getElementsByTagName("script")[0];
+        a.src=document.location.protocol+"//dnn506yrbagrg.cloudfront.net/pages/scripts/0011/1006.js?"+Math.floor(new Date().getTime()/3600000);
+        a.async=true;a.type="text/javascript";b.parentNode.insertBefore(a,b)}, 1);
+      </script>
+    <% end %>
+
   </body>
 </html>
