[#55161800]-added club cash on tom's form.

--- a/app/views/terms_of_memberships/_form.html.erb
+++ b/app/views/terms_of_memberships/_form.html.erb
@@ -95,6 +95,13 @@
         :content => t('lorem') } %> 
     </div>
   </div>
+
+  <div class="control-group">
+    <%= label_tag 'club_cash_amount', t('activerecord.attributes.terms_of_membership.wizard.club_cash_amount'), :class => 'control-label' %>
+    <div class="controls">
+      <%= text_field_tag 'club_cash_amount', @tom.club_cash_amount, :class => 'text_field input_medium', :type => 'number' %>
+    </div>
+  </div>
 </div>
 
 <% # Third step %>
