--- a/app/views/members/add_club_cash.html.erb
+++ b/app/views/members/add_club_cash.html.erb
@@ -26,7 +26,7 @@
     </tr>
     <tr>
     	<td> <%= submit_tag t('buttons.add_club_cash_transaction'), :class => 'btn btn-primary', :id => "submit_button" %> 
-    	     <%= link_to t('buttons.cancel'), show_member_path, :class => 'btn' %> </td>
+    	     <%= link_to t('buttons.cancel'), show_member_path, :class => 'btn', :id => 'cancel_button' %> </td>
     </tr>
   </table>
 <% end %>
