--- a/app/views/members/recover.html.erb
+++ b/app/views/members/recover.html.erb
@@ -17,7 +17,7 @@
 		<tr>
       <td> 
       	<%= submit_tag t('buttons.recover'), :class => 'btn btn-primary', :id => 'recover_button', :confirm => t('are_you_sure') %>
-        <%= link_to t('buttons.cancel'), show_member_path, :class => 'btn' %> 
+        <%= link_to t('buttons.cancel'), show_member_path, :class => 'btn', :id => 'cancel_button' %> 
       </td>
 		</tr>
 	</table>
